--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -447,7 +447,7 @@ CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-CONFIG_PM_WAKELOCKS_GC=y
+# CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
 CONFIG_PM_RUNTIME_TEST_SYSFS=y
 # CONFIG_PM_DOMAIN_DEBUG is not set
@@ -3444,7 +3444,7 @@ CONFIG_MOBICORE_API=y
 # CONFIG_SECURE_OS_CONTROL is not set
 # CONFIG_SECURE_OS_BOOSTER_API is not set
 # CONFIG_TRUSTONIC_TRUSTED_UI is not set
-CONFIG_GATOR=y
+# CONFIG_GATOR is not set
 CONFIG_TRACE=y
 # CONFIG_EXYNOS_DRAMTEST is not set
 CONFIG_EXYNOS_NOC_DEBUGGING=y
@@ -3738,7 +3738,7 @@ CONFIG_PRINTK_PROCESS=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
-CONFIG_FRAME_WARN=2064
+CONFIG_FRAME_WARN=2048
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_READABLE_ASM is not set
