--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -142,4 +142,6 @@ source "drivers/staging/samsung/Kconfig"
 
 source "drivers/staging/vnswap/Kconfig"
 
+source "drivers/staging/erofs/Kconfig"
+
 endif # STAGING
