--- a/drivers/staging/Makefile
+++ b/drivers/staging/Makefile
@@ -63,3 +63,4 @@ obj-$(CONFIG_GOLDFISH)		+= goldfish/
 obj-$(CONFIG_USB_DWC2)		+= dwc2/
 obj-$(CONFIG_SEC_EXT)		+= samsung/
 obj-$(CONFIG_VNSWAP)		+= vnswap/
+obj-$(CONFIG_EROFS_FS)          += erofs/
