--- a/arch/arm64/configs/los-16Q_a3xelte_defconfig
+++ b/arch/arm64/configs/los-16Q_a3xelte_defconfig
@@ -2852,6 +2852,7 @@ CONFIG_USB_RNDIS_MULTIPACKET=y
 # CONFIG_USB_G_WEBCAM is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
+# CONFIG_MMC_PERF_PROFILING is not set
 CONFIG_MMC_SUPPORT_STLOG=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
@@ -3189,7 +3190,6 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
-# CONFIG_SEC_OOM_KILLER is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_EXYNOS=y
@@ -3233,6 +3233,7 @@ CONFIG_SEC_DEBUG_LAST_KMSG=y
 CONFIG_SEC_PM=y
 CONFIG_SEC_PM_DEBUG=y
 CONFIG_VNSWAP=y
+# CONFIG_EROFS_FS is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
