--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -398,7 +398,7 @@ CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
 CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_FIX_INACTIVE_RATIO=y
 CONFIG_TIGHT_PGDAT_BALANCE=y
-CONFIG_SWAP_ENABLE_READAHEAD=y
+# CONFIG_SWAP_ENABLE_READAHEAD is not set
 CONFIG_MMAP_READAROUND_LIMIT=0
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_CMA=y
@@ -2848,6 +2848,7 @@ CONFIG_USB_RNDIS_MULTIPACKET=y
 # CONFIG_USB_G_WEBCAM is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
+# CONFIG_MMC_PERF_PROFILING is not set
 CONFIG_MMC_SUPPORT_STLOG=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
@@ -3185,7 +3186,6 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
-# CONFIG_SEC_OOM_KILLER is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_EXYNOS=y
@@ -3227,8 +3227,9 @@ CONFIG_SEC_DEBUG_LAST_KMSG=y
 # Samsung TN Power Management Options
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM_DEBUG is not set
 CONFIG_VNSWAP=y
+# CONFIG_EROFS_FS is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
