--- a/arch/arm64/configs/los-16Q_a3xelte_defconfig
+++ b/arch/arm64/configs/los-16Q_a3xelte_defconfig
@@ -402,7 +402,7 @@ CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
 CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_FIX_INACTIVE_RATIO=y
 CONFIG_TIGHT_PGDAT_BALANCE=y
-CONFIG_SWAP_ENABLE_READAHEAD=y
+# CONFIG_SWAP_ENABLE_READAHEAD is not set
 CONFIG_MMAP_READAROUND_LIMIT=0
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_CMA=y
@@ -3231,7 +3231,7 @@ CONFIG_SEC_DEBUG_LAST_KMSG=y
 # Samsung TN Power Management Options
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM_DEBUG is not set
 CONFIG_VNSWAP=y
 # CONFIG_EROFS_FS is not set
 CONFIG_CLKDEV_LOOKUP=y
